--- a/app/data/container-build/cerc-watcher-mobymask/Dockerfile
+++ b/app/data/container-build/cerc-watcher-mobymask/Dockerfile
@@ -1,5 +1,5 @@
 # TODO: move this into the cerc-io/mobymask-watcher repo
-FROM node:16.17.1-alpine3.16
+FROM node:18.15.0-alpine3.16
 
 RUN apk --update --no-cache add git python3 alpine-sdk
 
@@ -7,6 +7,7 @@ WORKDIR /app
 
 COPY . .
 
+# TODO: Use updated release
 RUN echo "Building watcher-ts" && \
     git checkout v0.2.19 && \
     yarn && yarn build
