--- a/app/data/container-build/cerc-watcher-uniswap-v3/Dockerfile
+++ b/app/data/container-build/cerc-watcher-uniswap-v3/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16.17.1-alpine3.16
+FROM node:18.15.0-alpine3.16
 
 RUN apk --update --no-cache add git python3 alpine-sdk
 
@@ -6,6 +6,7 @@ WORKDIR /app
 
 COPY . .
 
+# TODO: Use updated release
 RUN echo "Building uniswap-watcher-ts" && \
     git checkout v0.3.4 && \
     yarn && yarn build && yarn build:contracts
