Update watcher-ts to v0.2.34

--- a/app/data/stacks/erc20/stack.yml
+++ b/app/data/stacks/erc20/stack.yml
@@ -3,10 +3,12 @@ name: erc20-watcher
 repos:
   - cerc-io/go-ethereum
   - cerc-io/ipld-eth-db
+  - dboreham/foundry
   - cerc-io/ipld-eth-server
   - cerc-io/watcher-ts
 containers:
   - cerc/go-ethereum
+  - cerc/foundry
   - cerc/go-ethereum-foundry
   - cerc/ipld-eth-db
   - cerc/ipld-eth-server
