Build next js project

--- a/stack_orchestrator/data/container-build/cerc-nextjs-base/Dockerfile
+++ b/stack_orchestrator/data/container-build/cerc-nextjs-base/Dockerfile
@@ -1,7 +1,7 @@
 # Originally from: https://github.com/devcontainers/images/blob/main/src/javascript-node/.devcontainer/Dockerfile
 # [Choice] Node.js version (use -bullseye variants on local arm64/Apple Silicon): 18, 16, 14, 18-bullseye, 16-bullseye, 14-bullseye, 18-buster, 16-buster, 14-buster
-ARG VARIANT=20-bullseye
-FROM node:${VARIANT}
+# ARG VARIANT=20-bullseye
+FROM node:18-bullseye
 
 ARG USERNAME=node
 ARG NPM_GLOBAL=/usr/local/share/npm-global
