--- a/stack_orchestrator/data/compose/docker-compose-fixturenet-laconicd.yml
+++ b/stack_orchestrator/data/compose/docker-compose-fixturenet-laconicd.yml
@@ -3,6 +3,9 @@ services:
     restart: unless-stopped
     image: cerc/laconicd:local
     command: ["sh", "/docker-entrypoint-scripts.d/create-fixturenet.sh"]
+    environment:
+      TEST_AUCTION_ENABLED: ${TEST_AUCTION_ENABLED}
+      TEST_REGISTRY_EXPIRY: ${TEST_REGISTRY_EXPIRY}
     volumes:
       # The cosmos-sdk node's database directory:
       - laconicd-data:/root/.laconicd
